@@ -3,6 +3,7 @@
 
 #include <errno.h>
 #include <unistd.h>
+#include <fcntl.h>
 #include <unixlib/os.h>
 #include <unixlib/dev.h>
 #include <unixlib/unix.h>
@@ -29,6 +30,15 @@ int fsync (int fd)
     return __set_errno (EBADF);
 
   file_desc = getfd (fd);
+
+  /* Must be only for write */
+  if (!(file_desc->fflag & O_WRONLY))
+    return __set_errno (EBADF);
+
+  /* Only meaningful for those backed by a read RISC OS file handle */
+  if (file_desc->devicehandle->type != DEV_RISCOS)
+    return __set_errno (EINVAL);
+
   /* Ensure data has been written to the file.  */
   err = __os_args (255, (int) file_desc->devicehandle->handle, 0, NULL);
   if (err)
